--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 2rem;
-      background-color: #f9f9f9;
+      background-color: #f5f5f5;
     }
     h1 {
       text-align: center;
     }
     .container {
-      max-width: 600px;
+      max-width: 650px;
       margin: 0 auto;
       background: #fff;
       border-radius: 8px;
       padding: 1.5rem;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
     label {
       display: block;
@@ -54,10 +54,36 @@
     }
     .famous-list {
       margin-top: 0.5rem;
-      padding-left: 1rem;
+      padding-left: 0;
+      list-style: none;
     }
     .famous-item {
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.75rem;
+      padding: 0.75rem;
+      border: 1px solid #e0e0e0;
+      border-radius: 6px;
+      background-color: #fafafa;
+    }
+    .famous-item strong {
+      display: block;
+      font-size: 1.05rem;
+      margin-bottom: 0.2rem;
+    }
+    .snippet {
+      font-size: 0.9rem;
+      color: #333;
+      margin: 0.25rem 0 0.5rem;
+    }
+    .learn-more {
+      font-size: 0.85rem;
+      color: #007bff;
+      text-decoration: underline;
+      display: inline-block;
+      margin-top: 0.25rem;
+    }
+    .learn-more:hover {
+      color: #0056b3;
+      text-decoration: none;
     }
     .note {
       margin-top: 1rem;
